Tests/Suite6.out
compile.c:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘is’
compile.c:2: error: expected identifier or ‘(’ before ‘<’ token
compile.c:2: error: stray ‘#’ in program
compile.c:3: error: expected identifier or ‘(’ before ‘++’ token
compile.c:3:3: error: empty character constant
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
Failed: gcc compile.c -o a.out
compile.c:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘is’
compile.c:2: error: expected identifier or ‘(’ before ‘<’ token
compile.c:2: error: stray ‘#’ in program
compile.c:3: error: expected identifier or ‘(’ before ‘++’ token
compile.c:3:3: error: empty character constant
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
compile.c:4: error: expected identifier or ‘(’ before ‘{’ token
Failed: gcc compile.c -o b.out
