Tests/Suite6.suite
P a.out compile.c
T test10.in test10.out 1000
P b.out compile.c
T test10.in test10.out 1000
